<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/newCategory_titleTV"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/new_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@color/material_drawer_dark_primary_text"/>

    <LinearLayout
        android:id="@+id/newCategory_dataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newCategory_money_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="47"
            app:hintTextAppearance="@style/myTextInputLayoutHint">

            <EditText
                android:id="@+id/newCategory_moneyET"
                style="@style/myAppCompatLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/sum_hint"
                android:inputType="number"
                android:maxLength="7"
                android:maxLines="1"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newCategory_category_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="40"
            app:hintTextAppearance="@style/myTextInputLayoutHint">

            <EditText
                android:id="@+id/newCategory_categoryET"
                style="@style/myAppCompatLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/newCategory_dialog_category_hint"
                android:inputType="textCapSentences"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/newCategory_colorBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            fancy:fb_borderColor="@color/colorAccent"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="@color/colorFocusColor"
            fancy:fb_radius="50dp"
            fancy:fb_text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newCategory_btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/newCategory_negativeBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_negative_btn" />

        <Button
            android:id="@+id/newCategory_positiveBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_positive_btn" />
    </LinearLayout>

</LinearLayout>