<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:focusableInTouchMode="true">

    <Spinner
        android:id="@+id/newEntry_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/newEntry_textInputLayout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.555"
        app:layout_constraintTop_toTopOf="@+id/newEntry_textInputLayout" />

    <LinearLayout
        android:id="@+id/newEntry_btnLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/newEntry_spinner"
        app:layout_constraintTop_toBottomOf="@+id/newEntry_textInputLayout">

        <Button
            android:id="@+id/newEntry_negativeBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_negative_btn"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/newEntry_neutralBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/newEntry_dialog_neutral_btn"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/newEntry_positiveBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_positive_btn" />
    </LinearLayout>


    <TextView
        android:id="@+id/newEntry_titleTV"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/new_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@color/material_drawer_dark_primary_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newEntry_textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/myTextInputLayoutHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEntry_titleTV"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.5">

        <EditText
            android:id="@+id/newEntry_moneyET"
            style="@style/myAppCompatLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/sum_hint"
            android:inputType="number"
            android:maxLength="7"
            android:maxLines="1"
            android:padding="8dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

</android.support.constraint.ConstraintLayout>