<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/deleteDialog_titleTV"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/delete_dialog_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="@color/material_drawer_dark_primary_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/deleteDialog_message_TV"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteDialog_message_TV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/myTextDelete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteDialog_titleTV" />

    <LinearLayout
        android:id="@+id/deleteDialog_btnLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteDialog_message_TV"
        app:layout_constraintRight_toRightOf="@+id/deleteDialog_message_TV">

        <Button
            android:id="@+id/deleteDialog_negativeBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_negative_btn" />

        <Button
            android:id="@+id/deleteDialog_positiveBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_positive_btn" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>