<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/pieChartItem_category_ET"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:text="Категория"
        android:textColor="@color/material_drawer_dark_primary_text"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/pieChartItem_btnLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/pieChartItem_colorBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/pieChartItem_category_ET"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_focusColor="@color/colorFocusColor"
        fancy:fb_radius="50dp"
        fancy:fb_borderWidth="1dp"
        fancy:fb_borderColor="@color/colorAccent"
        fancy:fb_text=""
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/pieChartItem_btnLayout"
        app:layout_constraintLeft_toRightOf="@+id/pieChartItem_money_TV"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pie_chart_item_dialog_hint"
        android:id="@+id/pieChartItem_moneyHint_TV"
        style="@style/myTextInputLayoutHint"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pieChartItem_colorBtn"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/pieChartItem_money_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25000"
        style="@style/myAppCompatLarge"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/pieChartItem_moneyHint_TV"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/pieChartItem_btnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChartItem_colorBtn">

        <Button
            android:id="@+id/pieChartItem_negativeBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_negative_btn" />

        <Button
            android:id="@+id/pieChartItem_neutralBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pie_chart_item_dialog_neutral_btn" />

        <Button
            android:id="@+id/pieChartItem_positiveBtn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_positive_btn" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>